Export feature release